@@ -13,19 +13,18 @@ package org.eclipse.cdt.debug.internal.ui;
 import java.io.IOException;
 import java.io.Reader;
 import java.io.StringReader;
-
 import java.util.Iterator;
-import org.eclipse.swt.custom.StyleRange;
-import org.eclipse.swt.graphics.GC;
-import org.eclipse.swt.widgets.Display;
-
 import org.eclipse.cdt.debug.internal.ui.views.disassembly.DisassemblyMessages;
 import org.eclipse.debug.core.DebugPlugin;
 import org.eclipse.jface.text.DefaultInformationControl;
 import org.eclipse.jface.text.Region;
 import org.eclipse.jface.text.TextPresentation;
+import org.eclipse.swt.custom.StyleRange;
+import org.eclipse.swt.graphics.Drawable;
+import org.eclipse.swt.graphics.GC;
+import org.eclipse.swt.widgets.Display;
 
-public class HTMLTextPresenter implements DefaultInformationControl.IInformationPresenter {
+public class HTMLTextPresenter implements DefaultInformationControl.IInformationPresenter, DefaultInformationControl.IInformationPresenterExtension {
 	
 	private static final String LINE_DELIM= System.getProperty("line.separator", "\n"); //$NON-NLS-1$ //$NON-NLS-2$
 	
@@ -93,12 +92,12 @@ public class HTMLTextPresenter implements DefaultInformationControl.IInformation
 	/*
 	 * @see IHoverInformationPresenter#updatePresentation(Display display, String, TextPresentation, int, int)
 	 */
-	public String updatePresentation(Display display, String hoverInfo, TextPresentation presentation, int maxWidth, int maxHeight) {
+	public String updatePresentation(Drawable drawable, String hoverInfo, TextPresentation presentation, int maxWidth, int maxHeight) {
 		
 		if (hoverInfo == null)
 			return null;
 			
-		GC gc= new GC(display);
+		GC gc= new GC(drawable);
 		try {
 			
 			StringBuffer buffer= new StringBuffer();
@@ -184,5 +183,12 @@ public class HTMLTextPresenter implements DefaultInformationControl.IInformation
 		buffer.delete(0, start);
 		presentation.setResultWindow(new Region(start, buffer.length()));
 		return buffer.toString();
+	}
+
+	/* (non-Javadoc)
+	 * @see org.eclipse.jface.text.DefaultInformationControl$IInformationPresenter#updatePresentation(org.eclipse.swt.widgets.Display, java.lang.String, org.eclipse.jface.text.TextPresentation, int, int)
+	 */
+	public String updatePresentation( Display display, String hoverInfo, TextPresentation presentation, int maxWidth, int maxHeight ) {
+		return updatePresentation( (Drawable)display, hoverInfo, presentation, maxWidth, maxHeight );
 	}
 }
